<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true"
    tools:context=".ui.details.DetailsFragment">

    <RelativeLayout
        android:id="@+id/fragment_details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="#1CB098">

        <ImageView
            android:id="@+id/fragment_details_back_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_baseline_keyboard_arrow_left_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:text="@string/details"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/fragment_details_main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fragment_details_toolbar"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <ImageView
                android:id="@+id/fragment_details_image_view"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/fragment_details_meal_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/mealName"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fragment_details_meal_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/fragment_details_instructions_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/instructions"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fragment_details_instructions_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/fragment_details_ingredients_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ingredients"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <RelativeLayout
                android:id="@+id/fragment_details_ingredients_and_mesure_view"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/fragment_details_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/fragment_details_error_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/error"
        android:visibility="gone" />
</RelativeLayout>